# autoscientist-capstone

./: .env.example  .gitignore  ASSESSMENT_2026-05-29.md  KICKOFF.md  LICENSE  PERMANENT_FIX_WSL_MIGRATION.md  README.md  SESSION_RESUME_2026-06-10.md  WRITEUP.md  pyproject.toml
config/: default.toml  mcp.toml  models.toml  qwen2.5-32b-64k.Modelfile  qwen3-coder-64k.Modelfile  qwen3.6-27b-64k.Modelfile
config/domains/: clinical_tabular.toml  environmental_epidemiology.toml  medical_imaging.toml  numerical_optimization.toml
projects/california-cancer-ocean/: config.toml  kickoff_payload.json
projects/clinical-risk-tabular/: README.md  config.toml  kickoff_payload.json
projects/math693a-limited-descent/: README.md  config.toml  kickoff_payload.json
projects/paper/: draft.tex
projects/pneumonia-backhalf-slice/: config.toml
projects/pneumonia-data-efficiency/: README.md  STATE_OF_PLAY.md  config.toml  datasets  kickoff_payload.json  run_all_experiments.sh
prompts/: code_gen.md  code_review.md  code_worker.md  echo.md  figure_gen.md  handoff.md  idea_critic.md  idea_gen.md  lit_review.md  methodology.md  paper_writer.md  peer_reviewer.md  repo_publisher.md  results_validator.md  test_gen.md
scripts/: _approve_cp1.py  _approve_cp2.py  _budget_status.py  _budget_status_v2.py  _budget_watcher.sh  _check_cp.py  _check_nih_columns_v2.py  _check_nih_image.py  _check_nih_labels.py  _check_padchest_labels.py  _check_resnet.py  _check_run.py  _check_state.py  _check_trio.py  _cost_model.py  _cp_show.py  _db_diag.py  _dbg_chain.py  _dbg_codegen.py  _dbg_codegen2.py  _dbg_cp1.py  _dbg_cp2.py  _dbg_cp2_plan.py  _dbg_cp2_v2.py  _dbg_idea_gen.py  _dbg_qwen_assistant.py  _dbg_qwen_status.sh  _dbg_restart_status.py  _dbg_test_gen.py  _drive_cp.py  _extract_phase8_artifacts.py  _fix_status.py  _inspect_cp.py  _inspect_cp3.py  _inspect_run_findings.py  _launch.py  _net_diag.py  _preflight.sh  _probe_numctx.py  _reject_cp2.py  (+29 more)
(+181 files in other folders)
